--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,23 @@ dist: trusty
 matrix:
   include:
     - compiler: gcc
+
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
+
           packages:
+            - gcc-5
             - g++-5
-      env: COMPILER=g++-5
+
+      env:
+        - CC=gcc-5
+        - CXX=g++-5
 
 script:
   - cd build/nix
-  - make
-  - make tests
+  - make && make tests
 
 notifications:
   email: trflynn89@gmail.com
