--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: cpp
+language: generic
 
 sudo: required
 dist: trusty
@@ -17,6 +17,7 @@ matrix:
             - g++-5
 
       env:
+        - COMPILER_NAME=gcc
         - CC=gcc-5
         - CXX=g++-5
 
