--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,16 @@ compiler: gcc
 sudo: required
 dist: trusty
 
-apt:
-  sources:
-    - ubuntu-toolchain-r-test
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
 
-  packages:
-    - gcc-5
-    - g++-5
-    - gcc-5-multilib
-    - g++-5-multilib
+    packages:
+      - gcc-5
+      - g++-5
+      - gcc-5-multilib
+      - g++-5-multilib
 
 env:
   - COMPILER_NAME=gcc CC=gcc-5 CXX=g++-5
