--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ branches:
   only:
     - master
 
-image: Visual Studio 2015
+os: Visual Studio 2015
 
 install:
   - ps: $env:libfly_version = (Get-Content -Raw -Path VERSION.md)
