--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,12 @@ branches:
 
 os: Visual Studio 2015
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
   - ps: $env:libfly_version = (Get-Content -Raw -Path VERSION.md)
   - ps: Update-AppveyorBuild -Version "$env:libfly_version-$env:APPVEYOR_BUILD_NUMBER"
