Update release package naming Use x86 and x64 as arch in both win and nix releases Add -win and -nix to release package names

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ build_script:
   - cmd: build\win\release.bat
 
 artifacts:
-  - path: build\win\libfly-*.zip
+  - path: build\win\libfly-win*.zip
     name: libfly-zips
 
 deploy:
