Add task test (linux)

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - ./build/nix/release.sh
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -X gcov
+  - bash <(curl -s https://codecov.io/bash)
 
 before_deploy:
   - export RELEASE_32=$(ls build/nix/release-x86/etc/libfly-*.tar.bz2)
