--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,9 @@ version: "{build}"
 
 os: Visual Studio 2015
 
+install:
+  - git submodule update --init --recursive
+
 build_script:
   - cmd: build\win\release.bat
 
