Add support for clang 6.0 Fix warnings and errors found with clang. Mostly compiler/linker stuff, e.g. deleting polymorphic classes with non-virtual destructors.
Only really interesting one was SIGILL is raised in socket_test when the
socket callbacks were declared like this:

    [&](...) { };

Instead of:

    [&](fly::SocketPtr) { };

Not really sure why yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ dist: trusty
 
 matrix:
   include:
+    # Linux GCC 7
     - os: linux
 
       addons:
@@ -20,6 +21,17 @@ matrix:
 
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+    # Linux Clang 6
+    - os: linux
+
+      addons:
+        apt:
+          packages:
+            - clang-6.0
+
+      env:
+        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
 
 before_install:
   - eval "$MATRIX_EVAL"
