--- a/.gitattributes
+++ b/.gitattributes
@@ -1,34 +1,34 @@
 # Source files
-*.c text diff=cpp
-*.cc text diff=cpp
-*.cxx text diff=cpp
-*.cpp text diff=cpp
-*.c++ text diff=cpp
-*.h text diff=cpp
-*.hh text diff=cpp
-*.hpp text diff=cpp
-*.h++ text diff=cpp
-*.json text
+*.c text eol=lf diff=cpp
+*.cc text eol=lf diff=cpp
+*.cxx text eol=lf diff=cpp
+*.cpp text eol=lf diff=cpp
+*.c++ text eol=lf diff=cpp
+*.h text eol=lf diff=cpp
+*.hh text eol=lf diff=cpp
+*.hpp text eol=lf diff=cpp
+*.h++ text eol=lf diff=cpp
+*.json text eol=lf
 
 # Qt5 files
-*.creator text
-*.files text
-*.qrc text
-*.ui text
+*.creator text eol=lf
+*.files text eol=lf
+*.qrc text eol=lf
+*.ui text eol=lf
 
 # Build files
-Makefile text
-*.mk text
-*.sh text
-*.ps1 text
-*.bat text
-*.yml text
+Makefile text eol=lf
+*.mk text eol=lf
+*.sh text eol=lf
+*.ps1 text eol=lf
+*.bat text eol=lf
+*.yml text eol=lf
 
 # Git files
-*.gitattributes text
-.gitmodules text
-.gitignore text
-*.md text
+*.gitattributes text eol=lf
+.gitmodules text eol=lf
+.gitignore text eol=lf
+*.md text eol=lf
 
 # Compiled object files
 *.slo binary
