--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,10 @@ strategy:
       containerImage: ubuntu:18.04
 
 steps:
+- script: |
+    sudo apt-get install -y gcc-multilib g++-multilib
+  displayName: 'setup'
+
 - script: ./build/nix/release.sh
   displayName: 'build'
 
