--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,8 @@ jobs:
     - script: build\win\release.bat
       displayName: 'package'
 
-    - script: build\win\test.ps1
+    - task: PowerShell@2
+      filePath: build\win\test.ps1
       displayName: 'test'
 
     - task: CopyFiles@2
