--- a/.azure.yml
+++ b/.azure.yml
@@ -1,3 +1,12 @@
+trigger:
+  branches:
+    include:
+    - '*'
+
+  tags:
+    include:
+    - '*'
+
 jobs:
   #### Linux ####
   - template: build/ci/linux.yml
