Undo .azure.yml changes

--- a/.azure.yml
+++ b/.azure.yml
@@ -32,8 +32,20 @@ jobs:
   #### Windows ####
   - template: build/ci/windows.yml
     parameters:
+      configuration: 'Debug'
       arch: 'x86'
 
   - template: build/ci/windows.yml
     parameters:
+      configuration: 'Debug'
+      arch: 'x64'
+
+  - template: build/ci/windows.yml
+    parameters:
+      configuration: 'Release'
+      arch: 'x86'
+
+  - template: build/ci/windows.yml
+    parameters:
+      configuration: 'Release'
       arch: 'x64'
