Build Qt example project during Linux CI (#52)
Move the build example and Qt example projects to a root //examples folder.
Update the Docker image with Qt installed and build these projects during CI.

Update Qt installer script to support the latest Qt online installer. It now has
a menu for telemetry and disables installing versions other than the latest LTS
release.

--- a/examples/qt/Makefile
+++ b/examples/qt/Makefile
@@ -1,4 +1,4 @@
-# Example usage of the build system.
+# Example usage of the build system's Qt support.
 
 # Define the path to the source directory
 SOURCE_ROOT := $(CURDIR)
@@ -10,7 +10,7 @@ VERSION = 1.0.0
 include /usr/src/fly/api.mk
 
 # Main targets
-$(eval $(call ADD_TARGET, libfly_build_test, ., BIN))
+$(eval $(call ADD_TARGET, libfly_qt_example, ., QT))
 
 # Import the build system
 include /usr/src/fly/build.mk
