--- a/examples/qt/libfly_qt_example/libfly_qt_example.vcxproj.filters
+++ b/examples/qt/libfly_qt_example/libfly_qt_example.vcxproj.filters
@@ -6,10 +6,6 @@
       <Extensions>qrc;*</Extensions>
       <ParseFiles>false</ParseFiles>
     </Filter>
-    <Filter Include="Form Files">
-      <UniqueIdentifier>{99349809-55BA-4b9d-BF79-8FDBB0286EB3}</UniqueIdentifier>
-      <Extensions>ui</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{D9D6E242-F8AF-46E4-B9FD-80ECBC20BA3E}</UniqueIdentifier>
       <Extensions>qrc;*</Extensions>
@@ -20,38 +16,29 @@
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
       <ParseFiles>true</ParseFiles>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-      <ParseFiles>true</ParseFiles>
+    <Filter Include="Source Files\components">
+      <UniqueIdentifier>{74287df4-5cb8-4fd7-82f2-40759103cb92}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <QtUic Include="..\main_window.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
-  </ItemGroup>
-  <ItemGroup>
-    <QtRcc Include="..\example.qrc">
-      <Filter>Resource Files</Filter>
-    </QtRcc>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\main_window.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <QtMoc Include="..\main_window.h">
-      <Filter>Header Files</Filter>
-    </QtMoc>
+    <QtRcc Include="..\clocks.qrc">
+      <Filter>Resource Files</Filter>
+    </QtRcc>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\green.png">
-      <Filter>Resource Files</Filter>
-    </Image>
+    <None Include="..\clocks.qml">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\components\Clock.qml">
+      <Filter>Source Files\components</Filter>
+    </None>
+    <None Include="..\components\Hand.qml">
+      <Filter>Source Files\components</Filter>
+    </None>
   </ItemGroup>
 </Project>
